<resources>
    <string name="app_name">Cardy</string>
    <string name="action_card_list">Card List</string>
    <string name="action_add_card">Add card</string>
    <string name="amount">Amount</string>
    <string name="card">Card</string>
    <string name="card_number">Card Number</string>
    <string name="save">Save</string>
    <string name="bank_name">Bank name</string>
    <string name="goal">Goal</string>


    <string-array name="goal_type">
        <item>Amount of transactions</item>
        <item>Transactions expense</item>
    </string-array>

    <string name="goalTypePrompt">Choose goal type</string>

    <string-array name="goal_period">
        <item>Year</item>
        <item>Month</item>
    </string-array>

    <string name="goalPeriodPrompt">Choose goal period</string>
    <string name="goalLabel">Goal type</string>
    <string name="periodLabel">Goal period</string>
    <string name="add_your_cards">Add your cards</string>
    <string name="actual_goal">Actual Goal</string>
    <string name="date">Date</string>
    <string name="add_transaction">Add transaction</string>
    <string name="close">Close</string>
    <string name="your_expense">Your expense</string>
    <string name="delete_record_info">Delete this record?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="edit_card">Edit card</string>
    <string name="transaction_list">Transaction List</string>


</resources>
